--- a/src/upload.css
+++ b/src/upload.css
@@ -13,11 +13,11 @@ body,html{
 }
 #inputc{
     background-color: white;
-    margin-top: 15px;
-    height: 200px;
-    min-height: 100px;
-    margin-bottom: 10px;
+    margin: 15px 10px;
+    min-height: 200px;
     border-radius: 10px;
+    padding: 10px;
+    outline: none;
 }
 i{
     margin-right: 5px;
@@ -52,6 +52,10 @@ a{
 
 #lll ul{
     overflow-y: auto;
+}
+
+.inputcontent:focus {
+    box-shadow: 2px 2px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 @media screen and (min-width:1024px){
